# IdleMoney

./: .gitignore  CMakeLists.txt  ChaoticCodes.cpp  Readme.md  main.cpp  x.h
Models/: Class diagram v1.uxf
src/: Display.cpp  Display.h  Globals.h  Motherboard.cpp  Motherboard.h  Player.cpp  Player.h  RandomService.cpp  RandomService.h  main.cpp
